restyled search results to wrap images and navbar to color all padding on hover. squashed bug in profile for listing photo without listing. attempted to install carousel on listing show page

--- a/app/assets/stylesheets/google_maps.css
+++ b/app/assets/stylesheets/google_maps.css
@@ -5,6 +5,7 @@
   width: 40%;
   float: right;
   margin-top: 0.12em;
+  position: fixed;
 }
 
 /* Optional: Makes the sample page fill the window. */
